# SWE-Assignment-1---Anagrams

SOFTWARE ENGINEERING PROJECT/: CMakeLists.txt  count_characters.c  count_characters.h  find_anagrams.c  find_anagrams.h  half_anagrams.c  half_anagrams.h  main.c  quicksort.c  quicksort.h  read_input.c  read_input.h  sizes.h
